create node server for contacting email backend

--- a/index.html
+++ b/index.html
@@ -167,12 +167,16 @@
 								If you wish to contact me, send a message below! Atlernatively, my socials are hidden in the bottom left
 							</p>
 
-							<form method="post" action="#">
+							<form method="post" action="http://localhost:3000/contact">
 								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="col-6 col-12-mobile">
+										<input type="text" name="name" placeholder="Name" required />
+									</div>
+									<div class="col-6 col-12-mobile">
+										<input type="email" name="email" placeholder="Email" required />
+									</div>
 									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
+										<textarea name="message" placeholder="Message" required></textarea>
 									</div>
 									<div class="col-12">
 										<input type="submit" value="Send Message" />
