fix the page reloading after sending a message

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 								If you wish to contact me, send a message below! Atlernatively, my socials are hidden in the bottom left
 							</p>
 
-							<form method="post" action="http://localhost:3000/contact">
+							<form id="contact-form">
+							<p id="form-status" style="display: none; margin-top: 1em;"></p>
 								<div class="row">
 									<div class="col-6 col-12-mobile">
 										<input type="text" name="name" placeholder="Name" required />
@@ -207,6 +208,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/contact-form.js"></script>
 
 	</body>
 </html>
