change index and contact form asset for render deployment

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								If you wish to contact me, send a message below! Atlernatively, my socials are hidden in the bottom left
 							</p>
 
-							<form id="contact-form">
+							<form id="contact-form" data-api="https://prologue-portfolio.onrender.com/contact">
 							<p id="form-status" style="display: none; margin-top: 1em;"></p>
 								<div class="row">
 									<div class="col-6 col-12-mobile">
