update substiution decrypter link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/mattfehr/CECS-378/tree/main/Lab1" class="image fit" target="_blank" rel="noopener noreferrer">
+										<a href="https://cipher-site.onrender.com/" class="image fit" target="_blank" rel="noopener noreferrer">
 											<img src="images/sub_cipher.jpg" alt="" />
 										</a>
 										<header>
